# site

./: .gitignore  CNAME  README.md  about.html  about.markdown  contact.html  contact.markdown  index.html  preview-draft.sh  publications.html  rss.xml  site.cabal  site.hs  snippets.html  stack.yaml  store-draft.sh
bibliographies/: recursion-schemes.json
css/: default.css  syntax.css
docs/: about.html  contact.html  index.html  rss.xml
drafts/: agda-fingertrees.markdown  agda-github-action.markdown  applicative-assembler-lhs.markdown  applicative-queue.markdown  balancing-folds.markdown  balancing-scans.markdown  binary-logic-search.markdown  binary-representations.markdown  binomial-urn.markdown  braun-trees.markdown  cayley-trees.markdown  church-encoding-lhs.markdown  concatenative-free.markdown  corecursive-implicit-queues.markdown  countdown.markdown  cubical-probability.markdown  defining-decidable-equality-agda.markdown  depth-comonads.markdown  enumerating-trees.markdown  fast-agda-numbers.markdown  fast-verified-structures.markdown  how-to-binary-random-access-list.lagda.md  how-to-binary-random-access-list.md  how-to-use-github-actions-with-agda-haskell-latex.markdown  hyperfunctions.markdown  lazy-group-on.markdown  linear-phases.markdown  linguistics-in-computer-science.markdown  list-manipulation-tricks.markdown  literate-programming.markdown  modelling-is-not-mimicry.markdown  monadic-list-functions.markdown  monads-from-applicatives.markdown  more-random-access-lists.markdown  padics.markdown  permutations-by-sorting.markdown  printing-expression-lhs.markdown  prob-trees-lhs.markdown  probability-n-ways.markdown  propositional-truncation.markdown  (+24 more)
series/: tries.html  (+9 more)
(+842 files in other folders)
