name:               site
version:            0.1.0.1
build-type:         Simple
cabal-version:      >= 1.10

executable site
  hs-source-dirs:   src
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll >= 4.9
                  , pandoc >= 1.17
                  , hakyll-series >= 0.1 && <= 0.2
                  , containers >= 0.5
                  , pandoc-citeproc >= 0.14
                  , pandoc-types >=1.17.4.2 && <1.18
                  , tardis
  ghc-options:      -threaded
  default-language: Haskell2010
