name:               site
version:            0.1.0.1
build-type:         Simple
cabal-version:      >= 1.10

executable site
  hs-source-dirs:   src
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll >= 4.12
                  , pandoc
                  , pandoc-citeproc >= 0.17.0.1
                  , hakyll-series >= 0.1 && <= 0.2
                  , containers
                  , pandoc-citeproc
                  , pandoc-types
  ghc-options:      -threaded
  default-language: Haskell2010
